--- a/app/views/registration/steps/_logo.html.haml
+++ b/app/views/registration/steps/_logo.html.haml
@@ -41,6 +41,6 @@
               .message{ ng: { hide: "imageSrc() || imageUploader.isUploading" } }
                 = t(".logo_placeholder")
               .loading{ ng: { hide: "!imageUploader.isUploading" } }
-                = render partial: "components/loading"
+                = render partial: "components/spinner"
                 %br/
                 = t("registration.steps.images.uploading")
