--- a/app/views/registration/steps/_promo.html.haml
+++ b/app/views/registration/steps/_promo.html.haml
@@ -39,6 +39,6 @@
               .message{ ng: { hide: "imageSrc() || imageUploader.isUploading" } }
                 = t(".promo_image_placeholder")
               .loading{ ng: { hide: "!imageUploader.isUploading" } }
-                = render partial: "components/loading"
+                = render partial: "components/spinner"
                 %br/
                 = t("registration.steps.images.uploading")
