--- a/app/views/shop/products/_form.html.haml
+++ b/app/views/shop/products/_form.html.haml
@@ -21,7 +21,7 @@
                     = t :products_loading
                 .row.full
                   .small-12.columns.text-center
-                    = render partial: "components/loading"
+                    = render partial: "components/spinner"
 
           .hide-for-medium-down.large-1.columns
             -# Space between products and filters
