--- a/app/views/spree/admin/orders/index.html.haml
+++ b/app/views/spree/admin/orders/index.html.haml
@@ -82,7 +82,7 @@
       %td.actions
         %div.row-loading-icons
           %span{ng: {show: 'rowStatus[order.id] == "loading"', cloak: true}}
-            = render partial: "components/loading"
+            = render partial: "components/spinner"
           %i.success.icon-ok-sign{ng: {show: 'rowStatus[order.id] == "success"'} }
           %i.error.icon-remove-sign.with-tip{ng: {show: 'rowStatus[order.id] == "error"'}, 'ofn-with-tip' => t('.order_not_updated')}
         %a.icon_link.with-tip.icon-edit.no-text{'ng-href' => '{{order.edit_path}}', 'data-action' => 'edit', 'ofn-with-tip' => t('.edit')}
@@ -94,7 +94,7 @@
 .orders-loading{'ng-show' => 'RequestMonitor.loading'}
   .row
     .small-12.columns.fullwidth.text-center
-      = render partial: "components/loading"
+      = render partial: "components/spinner"
   .row
     .small-12.columns.fullwidth.text-center
       %span= t('.loading')
