--- a/app/assets/stylesheets/mail/email.scss
+++ b/app/assets/stylesheets/mail/email.scss
@@ -63,6 +63,12 @@ p.notice {
   margin-top: 20px;
 }
 
+p.powered-by {
+  background-color: #ebebeb;
+  padding: .5em;
+  text-align: center;
+}
+
 table.social {
   background-color: #ebebeb;
 
