--- a/app/assets/stylesheets/admin/datepicker.scss
+++ b/app/assets/stylesheets/admin/datepicker.scss
@@ -1,6 +1,10 @@
 input.datetimepicker {
   min-width: 12.9em;
 }
+.container input[readonly].datetimepicker {
+  background-color: white;
+  cursor: pointer;
+}
 
 img.ui-datepicker-trigger {
   margin-left: -1.75em;
