localize flatpickr date format
Flatpickr can format date. Use a localized dateFormat.

--- a/app/assets/javascripts/admin/util.js.erb
+++ b/app/assets/javascripts/admin/util.js.erb
@@ -25,7 +25,7 @@ $(document).ready(function(){
     }
   );
   window.FLATPICKR_DATE_DEFAULT = {
-    dateFormat: "Y-m-d H:i",
+    dateFormat: Spree.translations.flatpickr_date_format,
     locale: I18n.locale
   }
   window.FLATPICKR_DATETIME_DEFAULT = Object.assign(
