--- a/app/views/spree/admin/shared/_translations.html.erb
+++ b/app/views/spree/admin/shared/_translations.html.erb
@@ -3,6 +3,9 @@
   { :date_picker    => Spree.t(:js_format,
                               :scope => 'date_picker',
                               :default => 'yy/mm/dd'),
+    :flatpickr_date_format    => Spree.t(:flatpickr_date_format,
+                              :scope => 'date_picker',
+                              :default => 'Y-m-d H:i'),
     :abbr_day_names           => I18n.t(:abbr_day_names, :scope => :date),
     :add                      => I18n.t(:add, scope: :actions),
     :are_you_sure_delete      => Spree.t(:are_you_sure_delete),
