remove unused options
as we use flatpickr, we don't need these options

--- a/app/views/spree/admin/shared/_translations.html.erb
+++ b/app/views/spree/admin/shared/_translations.html.erb
@@ -1,9 +1,6 @@
 <script>
   Spree.translations = <%==
-  { :date_picker    => Spree.t(:js_format,
-                              :scope => 'date_picker',
-                              :default => 'yy/mm/dd'),
-    :flatpickr_date_format    => Spree.t(:flatpickr_date_format,
+  {:flatpickr_date_format    => Spree.t(:flatpickr_date_format,
                               :scope => 'date_picker',
                               :default => 'Y-m-d H:i'),
     :abbr_day_names           => I18n.t(:abbr_day_names, :scope => :date),
