change css selector and use a precise one
Be more precise on selector. `flatpickr-input` is more selective.

--- a/app/assets/stylesheets/admin/datepicker.scss
+++ b/app/assets/stylesheets/admin/datepicker.scss
@@ -1,7 +1,8 @@
 input.datetimepicker {
   min-width: 12.9em;
 }
-.container input[readonly].datetimepicker {
+
+.container input[readonly].flatpickr-input {
   background-color: white;
   cursor: pointer;
 }
