code climate update
"color white should be written in hexadecimal form as #ffffff"

--- a/app/assets/stylesheets/admin/datepicker.scss
+++ b/app/assets/stylesheets/admin/datepicker.scss
@@ -3,7 +3,7 @@ input.datetimepicker {
 }
 
 .container input[readonly].flatpickr-input {
-  background-color: white;
+  background-color: #ffffff;
   cursor: pointer;
 }
 
