Update shipping adjustment references in admin order view

--- a/app/views/spree/admin/orders/_shipment.html.haml
+++ b/app/views/spree/admin/orders/_shipment.html.haml
@@ -40,36 +40,24 @@
               = label_tag 'selected_shipping_rate_id', Spree.t(:shipping_method)
               = select_tag :selected_shipping_rate_id, options_for_select(shipment.shipping_rates.backend.map { |sr| ["#{sr.name} #{sr.display_price}", sr.id] }, shipment.selected_shipping_rate_id), { :class => 'select2 fullwidth', :data => { 'shipment-number' => shipment.number } }
 
-            - if shipment.adjustment && shipment.adjustment.closed?
-              %div.field.omega.four.columns
-                %label
-                  = Spree.t(:associated_adjustment_closed)
-                %ul
-                  %li
-                    = radio_button_tag :open_adjustment, 'yes', false, :data => { 'shipment-number' => shipment.number }
-                    = "Yes"
-                  %li
-                    = radio_button_tag :open_adjustment, 'no', true, :data => {'shipment-number' => shipment.number }
-                    = "No"
-
           %td.actions
             - if can? :update, shipment
               = link_to '', '', :class => 'save-method icon_link icon-ok no-text with-tip', :data => { 'shipment-number' => shipment.number, :action => 'save' }, title: I18n.t('actions.save')
               = link_to '', '', :class => 'cancel-method icon_link icon-cancel no-text with-tip', :data => { :action => 'cancel' }, :title => I18n.t('actions.cancel')
       %tr.show-method.total
         %td{ :colspan => "4" }
-          - if shipment.adjustment.present?
+          - if shipment.selected_shipping_rate
             %strong
-              = "#{shipment.adjustment.label}: #{shipment.shipping_method.name}"
+              = "#{t('shipping')}: #{shipment.selected_shipping_rate.name}"
           - else
-            = Spree.t(:cannot_set_shipping_method_without_address)
+            = Spree.t(:no_shipping_method_selected)
 
         %td.total{ :align => "center" }
-          - if shipment.adjustment.present?
+          - if shipment.selected_shipping_rate
             %span
-              = shipment.adjustment.display_amount
+              = shipment.display_amount
 
-        - if shipment.adjustment.present? && !shipment.shipped?
+        - if !shipment.shipped?
           %td.actions
             - if can? :update, shipment
               = link_to '', '', :class => 'edit-method icon_link icon-edit no-text with-tip', :data => { :action => 'edit' }, :title => Spree.t('edit')
