add translation for "today" and "now" buttons
and remove useless translations

--- a/app/assets/javascripts/admin/util.js.erb
+++ b/app/assets/javascripts/admin/util.js.erb
@@ -14,7 +14,7 @@ $(document).ready(function() {
     plugins: [
         ShortcutButtonsPlugin({
           button: [{
-            label: "Today"
+            label: Spree.translations.today
           }],
           label: "or",
           onClick: onClickButtons
@@ -30,7 +30,7 @@ $(document).ready(function() {
       plugins: [
         ShortcutButtonsPlugin({
           button: [{
-            label: "Now"
+            label: Spree.translations.now
           }],
           label: "or",
           onClick: onClickButtons
