--- a/app/views/spree/admin/shared/_translations.html.erb
+++ b/app/views/spree/admin/shared/_translations.html.erb
@@ -3,6 +3,8 @@
   {:flatpickr_date_format    => Spree.t(:flatpickr_date_format,
                               :scope => 'date_picker',
                               :default => 'Y-m-d H:i'),
+    :today                    => Spree.t('date_picker.today'),
+    :now                      => Spree.t('date_picker.now'),
     :add                      => I18n.t(:add, scope: :actions),
     :are_you_sure_delete      => Spree.t(:are_you_sure_delete),
     :bill_address             => I18n.t(:bill_address),
@@ -13,9 +15,6 @@
     :edit                     => Spree.t(:edit),
     :loading                  => Spree.t(:loading),
     :more                     => Spree.t(:more),
-    :datetime_ui_current_text => I18n.t('datetime_picker_ui.current_text'),
-    :datetime_ui_close_text   => I18n.t('datetime_picker_ui.close_text'),
-    :datetime_ui_time_text    => I18n.t('datetime_picker_ui.time_text'),
     :name                     => Spree.t(:name),
     :next                     => I18n.t(:next),
     :paste                    => I18n.t(:paste, scope: :actions),
