specify date and datetime format

--- a/app/assets/javascripts/admin/util.js.erb
+++ b/app/assets/javascripts/admin/util.js.erb
@@ -25,6 +25,7 @@ $(document).ready(function() {
     {},
     window.FLATPICKR_DATE_DEFAULT,
     {
+      dateFormat: Spree.translations.flatpickr_datetime_format,
       enableTime: true,
       time_24hr: true,
       plugins: [
