--- a/app/views/spree/admin/shared/_translations.html.erb
+++ b/app/views/spree/admin/shared/_translations.html.erb
@@ -2,6 +2,9 @@
   Spree.translations = <%==
   {:flatpickr_date_format    => Spree.t(:flatpickr_date_format,
                               :scope => 'date_picker',
+                              :default => 'Y-m-d'),
+    :flatpickr_datetime_format    => Spree.t(:flatpickr_datetime_format,
+                              :scope => 'date_picker',
                               :default => 'Y-m-d H:i'),
     :today                    => Spree.t('date_picker.today'),
     :now                      => Spree.t('date_picker.now'),
