--- a/app/assets/stylesheets/admin/plugins/flatpickr-customization.scss
+++ b/app/assets/stylesheets/admin/plugins/flatpickr-customization.scss
@@ -1,4 +1,8 @@
 .flatpickr-calendar {
+    /* Disable animation */
+    &.animate.open {
+        animation: none;
+    }
     border-radius: 0;
     &.arrowBottom:after {
         border-top-color: #eceef1;
