Fit bulk buy modal on small mobile screens
On some Iphones the modal wouldn't fit and there were line breaks
between the input fields. The inputs are now stacked vertically on small
screens so that there is still plenty of space for large numbers in the
quantity fields.

--- a/app/assets/javascripts/templates/bulk_buy_modal.html.haml
+++ b/app/assets/javascripts/templates/bulk_buy_modal.html.haml
@@ -9,7 +9,7 @@
     {{ variant.line_item.total_price | localizeCurrency }}
 
 .row
-  .columns.small-6
+  .columns.small-12.medium-6
     .variant-bulk-buy-quantity-label
       {{ "js.shopfront.bulk_buy_modal.min_quantity" | t }}
     %div
@@ -24,7 +24,7 @@
       %button.bulk-buy-add.variant-quantity{type: "button", ng: {click: "add(1)", disabled: "!canAdd(1)"}}
         -# U+FF0B Fullwidth Plus Sign
         ＋
-  .columns.small-6
+  .columns.small-12.medium-6
     .variant-bulk-buy-quantity-label
       {{ "js.shopfront.bulk_buy_modal.max_quantity" | t }}
     %div
