--- a/app/views/producer_mailer/order_cycle_report.html.haml
+++ b/app/views/producer_mailer/order_cycle_report.html.haml
@@ -2,7 +2,12 @@
   = t :producer_mail_greeting
   #{" " + @producer.name},
 %p
-  = t :producer_mail_text_before, ready_for: @ready_for
+  = t :producer_mail_text_before
+  %ul
+    - @distributors_pickup_times.each do |distributor_name, pickup_time|
+      %li
+        #{distributor_name} (#{pickup_time})
+
   - if @receival_instructions
     %p
       %b
