--- a/app/views/producer_mailer/order_cycle_report.text.haml
+++ b/app/views/producer_mailer/order_cycle_report.text.haml
@@ -1,11 +1,13 @@
 #{t :producer_mail_greeting} #{@producer.name},
 \
-= t :producer_mail_text_before, ready_for: @ready_for
+= t :producer_mail_text_before
+\
+- @distributors_pickup_times.each do |distributor_name, pickup_time|
+  \- #{distributor_name} (#{pickup_time})
 \
 - if @receival_instructions
   = t :producer_mail_delivery_instructions
   = @receival_instructions
-
 \
 Orders summary
 ================
