code climate checks
 - use variables for colors instead of values
 - trailinf line at the end of file
 - new line after each declaration
 - 2 spaces of indentation
 - avoid qualifying elements in selectors
 - prefer lowercase in hexa color

--- a/app/assets/stylesheets/admin/datepicker.scss
+++ b/app/assets/stylesheets/admin/datepicker.scss
@@ -2,8 +2,8 @@ input.datetimepicker {
   min-width: 12.9em;
 }
 
-.container input[readonly].flatpickr-input {
-  background-color: #ffffff;
+.container .flatpickr-input {
+  background-color: $white;
   cursor: pointer;
 }
 
