factorize as we need only one file for datepicker

--- a/app/assets/stylesheets/admin/components/date-picker.scss
+++ b/app/assets/stylesheets/admin/components/date-picker.scss
@@ -10,3 +10,18 @@
     width: 96px !important;
   }
 }
+
+input.datetimepicker {
+  min-width: 12.9em;
+}
+
+.container input[readonly].flatpickr-input {
+  background-color: $white;
+  cursor: pointer;
+}
+
+img.ui-datepicker-trigger {
+  margin-left: -1.75em;
+  position: absolute;
+  margin-top: 0.5em;
+}
