--- a/app/views/spree/admin/mail_methods/_form.html.haml
+++ b/app/views/spree/admin/mail_methods/_form.html.haml
@@ -1,6 +1,8 @@
 %div
   .row
     %fieldset.no-border-bottom
+      %div.notice
+        = t('spree.mail_settings_notice_html')
       %legend{align: "center"}= t("spree.general")
       .field
         = label_tag :mails_from, t("spree.send_mails_as")
@@ -12,14 +14,14 @@
       .field
         = label_tag :mail_bcc, t("spree.send_copy_of_all_mails_to")
         %br/
-        = text_field_tag :mail_bcc, Spree::Config[:mail_bcc], maxlength: 256, class: 'fullwidth'
+        = text_field_tag :mail_bcc, Spree::Config[:mail_bcc], disabled: true, class: 'fullwidth'
         %br/
         %span.info
           = t("spree.smtp_send_copy_to_this_addresses")
       .field
         = label_tag :intercept_email, t("spree.intercept_email_address")
         %br/
-        = text_field_tag :intercept_email, Spree::Config[:intercept_email], maxlength: 256, class: 'fullwidth'
+        = text_field_tag :intercept_email, Spree::Config[:intercept_email], disabled: true, class: 'fullwidth'
         %br/
         %span.info
           = t("spree.intercept_email_instructions")
