--- a/app/views/spree/users/show.html.haml
+++ b/app/views/spree/users/show.html.haml
@@ -22,14 +22,14 @@
 
   .row.tabset-ctrl#account-tabs{ style: 'margin-bottom: 100px', navigate: 'true', selected: 'orders', prefix: 'account' }
     .small.12.medium-3.columns.tab{ name: "orders" }
-      %a{ }=t('.tabs.orders')
+      %a=t('.tabs.orders')
     - if Spree::Config.stripe_connect_enabled && Stripe.publishable_key
       .small.12.medium-3.columns.tab{ name: "cards" }
-        %a{ }=t('.tabs.cards')
+        %a=t('.tabs.cards')
     .small.12.medium-3.columns.tab{ name: "transactions" }
-      %a{ }=t('.tabs.transactions')
+      %a=t('.tabs.transactions')
     .small.12.medium-3.columns.tab{ name: "settings" }
-      %a{ }=t('.tabs.settings')
+      %a=t('.tabs.settings')
     .small-12.columns.tab-view
 
   = render partial: "shared/footer"
