--- a/app/assets/stylesheets/admin/components/date-picker.scss
+++ b/app/assets/stylesheets/admin/components/date-picker.scss
@@ -2,6 +2,8 @@
 @import 'admin/globals/mixins';
 @import 'admin/plugins/font-awesome';
 
+// scss-lint:disable QualifyingElement
+
 .date-range-filter {
   .range-divider {
     padding: 0;
@@ -25,3 +27,5 @@ img.ui-datepicker-trigger {
   position: absolute;
   margin-top: 0.5em;
 }
+
+// scss-lint:enable QualifyingElement
