overriding flatpickr selectors needs to be with uppercase
so disable the scss-lint check SelectorFormat

--- a/app/assets/stylesheets/admin/plugins/flatpickr-customization.scss
+++ b/app/assets/stylesheets/admin/plugins/flatpickr-customization.scss
@@ -1,6 +1,8 @@
 $background-grey: #eceef1;
 $background-blue: #5498da;
 
+// scss-lint:disable SelectorFormat
+
 .flatpickr-calendar {
   border-radius: 0;
 
@@ -56,3 +58,5 @@ $background-blue: #5498da;
     border-color: $background-blue;
   }
 }
+
+// scss-lint:enable SelectorFormat
