Fix the link to the order in the order cancelled email.

--- a/app/views/spree/order_mailer/cancel_email_for_shop.html.haml
+++ b/app/views/spree/order_mailer/cancel_email_for_shop.html.haml
@@ -4,4 +4,4 @@
 %p
   = t('spree.order_mailer.cancel_email_for_shop.intro', number: @order.number)
 
-= link_to t('spree.order_mailer.cancel_email_for_shop.view_cancelled_order'), spree.admin_order_url(@order)
+= link_to t('spree.order_mailer.cancel_email_for_shop.view_cancelled_order'), spree.edit_admin_order_url(@order)
