Re-enable mail_bcc field in mail method settings
This feels safer because we don't risk messing up with any instance's
operations while still moving us towards removing this page.

--- a/app/views/spree/admin/mail_methods/_form.html.haml
+++ b/app/views/spree/admin/mail_methods/_form.html.haml
@@ -14,7 +14,7 @@
       .field
         = label_tag :mail_bcc, t("spree.send_copy_of_all_mails_to")
         %br/
-        = text_field_tag :mail_bcc, Spree::Config[:mail_bcc], disabled: true, class: 'fullwidth'
+        = text_field_tag :mail_bcc, Spree::Config[:mail_bcc], maxlength: 256, class: 'fullwidth'
         %br/
         %span.info
           = t("spree.smtp_send_copy_to_this_addresses")
