--- a/app/assets/stylesheets/admin/all.scss
+++ b/app/assets/stylesheets/admin/all.scss
@@ -12,6 +12,9 @@
  *= require shared/textAngular
  *= require shared/ng-tags-input.min
  *= require select2
+ *= require flatpickr/dist/flatpickr
+ *= require flatpickr/dist/themes/material_blue
+ *= require shortcut-buttons-flatpickr/dist/themes/light
 
  *= require_self
 */
