--- a/app/views/spree/admin/products/new.html.haml
+++ b/app/views/spree/admin/products/new.html.haml
@@ -37,7 +37,7 @@
             %input{ type: 'hidden', 'ng-value' => 'product.master.unit_value', name: 'product[unit_value]' }
             %input{ type: 'hidden', 'ng-value' => 'product.master.unit_description', name: 'product[unit_description]' }
         = render 'display_as', f: f
-        .three.columns.omega{ 'ng-show' => "product.variant_unit_with_scale == 'items'" }
+        .six.columns.omega{ 'ng-show' => "product.variant_unit_with_scale == 'items'" }
           = f.field_container :unit_name do
             = f.label :product_variant_unit_name, t(".unit_name")
             %span.required *
