Use question mark with tooltip directive
Needs some css customization due to the use of a button element (instead of a basic span)

--- a/app/assets/javascripts/templates/shop_variant_with_unit_price.html.haml
+++ b/app/assets/javascripts/templates/shop_variant_with_unit_price.html.haml
@@ -9,7 +9,10 @@
       "price-breakdown-animation" => true}
     {{ variant.price_with_fees | localizeCurrency }}
     .variant-unit-price
-      %span.question-mark-icon
+      %question-mark-with-tooltip{"question-mark-with-tooltip" => "_",
+      "question-mark-with-tooltip-append-to-body" => "true",
+      "question-mark-with-tooltip-placement" => "top",
+      "question-mark-with-tooltip-animation" => true}
       {{ variant.unit_price_price | localizeCurrency }} / {{ variant.unit_price_unit }}
         
   .medium-2.large-2.columns.total-price
