Change on_hand's field to number_field and add required attribute

--- a/app/views/spree/admin/products/new.html.haml
+++ b/app/views/spree/admin/products/new.html.haml
@@ -57,7 +57,7 @@
             = f.label :on_hand, t(".on_hand")
             %span.required *
             %br/
-            = f.text_field :on_hand, class: 'fullwidth'
+            = f.number_field :on_hand, class: 'fullwidth', min: '0', required: true
             = f.error_message_on :on_hand
         .two.columns.omega
           = f.field_container :on_demand do
