--- a/app/assets/stylesheets/darkswarm/ui.scss
+++ b/app/assets/stylesheets/darkswarm/ui.scss
@@ -161,4 +161,9 @@ a.button.large {
 
 .disable-scroll {
   overflow: hidden;
+  padding-right: 20px;
+}
+
+.disable-scroll .nav-icons-menu {
+  margin-left: 20px;
 }
