--- a/app/assets/stylesheets/darkswarm/question-mark-icon.scss
+++ b/app/assets/stylesheets/darkswarm/question-mark-icon.scss
@@ -1,6 +1,7 @@
 .question-mark-icon {
   position: relative;
-  top: 1px;
+  top: 6px;
+  background-image: image-url("question-mark-icon.svg");
 
   // Reset button element css attributes
   padding: 0;
@@ -12,21 +13,6 @@
   &:hover,
   &:focus {
     background-color: transparent;
-  }
-
-  &::before {
-    content: "?";
-    padding-left: 1px;
-    display: inline-block;
-    color: $tiny-blue;
-    border: 1px solid $grey-250;
-    border-radius: 50%;
-    text-align: center;
-    background-color: $grey-075;
-    width: 20px;
-    height: 20px;
-    font-weight: bold;
-    font-size: 1rem;
   }
 }
 
