Add a context to question mark icon with tooltip to display it adjusted
 - This behavior permit use to create custom CSS specifications to display this tooltip best fitted to the context.

--- a/app/assets/stylesheets/darkswarm/question-mark-icon.scss
+++ b/app/assets/stylesheets/darkswarm/question-mark-icon.scss
@@ -56,4 +56,14 @@
     left: 7.4rem;
     z-index: -1;
   }
+
+  &.cart-sidebar {
+    // Small size (used in the cart sidebar)
+    width: 13rem;
+    margin-left: -10.4rem;
+
+    .joyride-nub.bottom {
+      left: 10.4rem;
+    }
+  }
 }
