--- a/app/views/shared/menu/_cart_sidebar.html.haml
+++ b/app/views/shared/menu/_cart_sidebar.html.haml
@@ -28,7 +28,8 @@
                 %question-mark-with-tooltip{"question-mark-with-tooltip" => "_",
                 "question-mark-with-tooltip-append-to-body" => "true",
                 "question-mark-with-tooltip-placement" => "top",
-                "question-mark-with-tooltip-animation" => true}
+                "question-mark-with-tooltip-animation" => true,
+                context: "'cart-sidebar'"}
               .options-text
                 {{ line_item.variant.unit_price_price | localizeCurrency }} / {{ line_item.variant.unit_price_unit }}
 
