--- a/app/assets/stylesheets/darkswarm/question-mark-icon.scss
+++ b/app/assets/stylesheets/darkswarm/question-mark-icon.scss
@@ -38,6 +38,15 @@
   margin-top: 0.1rem;
   background-color: transparent;
 
+  .background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+
   .joyride-content-wrapper {
     background-color: $dynamic-blue;
     padding: $padding-small;
