--- a/app/views/spree/admin/reports/packing.html.haml
+++ b/app/views/spree/admin/reports/packing.html.haml
@@ -7,7 +7,7 @@
 
   .row
     .alpha.two.columns= label_tag nil, t(:report_producers)
-    .omega.fourteen.columns= select_tag(:supplier_id_in, options_from_collection_for_select(@suppliers, :id, :name, raw_params[:supplier_id_in]), {class: "select2 fullwidth", multiple: true})
+    .omega.fourteen.columns= select_tag(:supplier_id_in, options_from_collection_for_select(@suppliers, :id, :name, params[:supplier_id_in]), {class: "select2 fullwidth", multiple: true})
 
   .row
     .alpha.two.columns= label_tag nil, t(:report_customers_cycle)
