--- a/app/views/spree/admin/reports/xero_invoices.html.haml
+++ b/app/views/spree/admin/reports/xero_invoices.html.haml
@@ -18,13 +18,13 @@
     .twelve.columns.omega= text_field_tag :initial_invoice_number, params[:initial_invoice_number]
   .row
     .four.columns.alpha= label_tag :invoice_date, t(:invoice_date)
-    .twelve.columns.omega= text_field_tag :invoice_date, raw_params[:invoice_date], class: 'datetimepicker'
+    .twelve.columns.omega= text_field_tag :invoice_date, params[:invoice_date], class: 'datetimepicker'
   .row
     .four.columns.alpha= label_tag :due_date, t(:due_date)
-    .twelve.columns.omega= text_field_tag :due_date, raw_params[:due_date], class: 'datetimepicker'
+    .twelve.columns.omega= text_field_tag :due_date, params[:due_date], class: 'datetimepicker'
   .row
     .four.columns.alpha= label_tag :account_code, t(:account_code)
-    .twelve.columns.omega= text_field_tag :account_code, raw_params[:account_code]
+    .twelve.columns.omega= text_field_tag :account_code, params[:account_code]
   .row
     .four.columns.alpha= label_tag :csv, t(:report_customers_csv)
     .twelve.columns.omega= check_box_tag :csv
