--- a/app/assets/javascripts/admin/util.js.erb
+++ b/app/assets/javascripts/admin/util.js.erb
@@ -9,7 +9,9 @@ $(document).ready(function() {
     fp.setDate(date, true);
   }
   window.FLATPICKR_DATE_DEFAULT = {
-    dateFormat: Spree.translations.flatpickr_date_format,
+    altInput: true,
+    altFormat: Spree.translations.flatpickr_date_format,
+    dateFormat: "Y-m-d",
     locale: I18n.locale,
     plugins: [
         ShortcutButtonsPlugin({
@@ -25,7 +27,9 @@ $(document).ready(function() {
     {},
     window.FLATPICKR_DATE_DEFAULT,
     {
-      dateFormat: Spree.translations.flatpickr_datetime_format,
+      altInput: true,
+      altFormat: Spree.translations.flatpickr_datetime_format,
+      dateFormat: "Y-m-d H:i",
       enableTime: true,
       time_24hr: true,
       plugins: [
