Add a flatpickr plugin to attach 'id' attribute to input element
 - As we use `altInput`, the original input is hidden. This plugin forward the `id` attribute of the original input to the input created on-the-fly and used by end user.

--- a/app/assets/javascripts/admin/util.js.erb
+++ b/app/assets/javascripts/admin/util.js.erb
@@ -20,7 +20,8 @@ $(document).ready(function() {
           }],
           label: "or",
           onClick: onClickButtons
-        })
+        }),
+        labelPlugin({})
       ]
   }
   window.FLATPICKR_DATETIME_DEFAULT = Object.assign(
@@ -39,7 +40,8 @@ $(document).ready(function() {
           }],
           label: "or",
           onClick: onClickButtons
-        })
+        }),
+        labelPlugin({})
       ]
     }
   );
