Refactor payment auth button to fit into table row
This looks a bit more cohesive with the rest of the row cells while
still standing out from the rest.

--- a/app/views/spree/users/_transactions.html.haml
+++ b/app/views/spree/users/_transactions.html.haml
@@ -18,7 +18,7 @@
                   = payment.updated_at.strftime("%Y-%m-%d")
                 %td.order3
                   %a{ href: "#{payment.cvv_response_message}" }
-                    %button.bright
+                    %button.x-small
                       Authorize
                 %td.order5
                   = payment.display_amount
