--- a/app/assets/stylesheets/darkswarm/footer.scss
+++ b/app/assets/stylesheets/darkswarm/footer.scss
@@ -5,7 +5,7 @@
 footer {
   .row {
     p a {
-      font-size: 0.875rem;
+      font-size: 1rem;
     }
 
     a, a * {
@@ -108,8 +108,8 @@ footer {
       }
 
       .social-icons {
-        margin-bottom: 0.25rem;
-        margin-top: 0.75rem;
+        margin-bottom: 0.9rem;
+        padding-top: 0.1rem;
 
         a {
           i {
@@ -127,6 +127,10 @@ footer {
           }
         }
       }
+    }
+
+    .legal a {
+      font-size: 0.875rem;
     }
   }
 }
