--- a/app/views/spree/shared/_payment.html.haml
+++ b/app/views/spree/shared/_payment.html.haml
@@ -1,10 +1,9 @@
 %p.callout
   %span{:style => "float:right;"}
-    - balance = OrderBalance.new(@order)
-    - if !balance.zero?
-      = balance.label
+    - if !@order.outstanding_balance.zero?
+      = @order.outstanding_balance.label
       \:
-      %strong= balance.amount
+      %strong= @order.outstanding_balance.amount
     - else
       - if @order.paid?
         = t :email_payment_paid
